--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
 #  Please add requirements to setup.py
 -e .[all]
+
+black==19.10b0; python_version >= '3.6'
+regex==2019.11.1; python_version >= '3.6'   # Needed for black
+coverage==4.5.4
+flake8==3.7.8
+boto>=2.45.0
+prompt-toolkit==2.0.10 # 3.x is not available with python2
+click
+inflection==0.3.1
+lxml
+packaging
+pytest
+pytest-cov; python_version >= '3.6'
+# https://github.com/aws/aws-xray-sdk-python/issues/196
+# Downgrade pytest-cov to the last version that uses coverage < 5
+pytest-cov<=2.10.1; python_version < '3.6'
+sure==1.4.11
+freezegun
